<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background">
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        app:elevation="6dp"
        app:fabSize="normal"
        android:translationZ="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="12dp"
        app:backgroundTint="@color/primary_color"
        android:src="@drawable/ic_action_edit"
        />
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
   >
    <ImageView
        android:id="@+id/image"
        android:paddingTop="30dp"
        android:layout_width="100dp"
        android:layout_height="100dp" />
    <TextView
        android:paddingTop="14dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:fontFamily="sans-serif-light"
        android:textColor="@android:color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginTop="14dp"
        android:gravity="center_horizontal">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_stat_work" />
        <TextView
            android:paddingTop="3dp"
          android:paddingLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/position"
            android:fontFamily="sans-serif-light"
            android:textColor="@android:color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_margin="14dp"
        android:gravity="center_horizontal">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_stat_location_on" />
        <TextView
            android:paddingLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="Kolkata ,West Bengal ,India"
            android:textColor="@android:color/white"/>
    </LinearLayout>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/notice"
    android:background="@drawable/button"
    android:fontFamily="sans-serif-light"
    android:textColor="@android:color/white"
   android:padding="14dp"/>
    <LinearLayout
android:paddingTop="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="16dp"
                android:text="@string/two"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="20sp"
                android:paddingTop="16dp"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="24dp"
                android:text="@string/connect"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:fontFamily="sans-serif-light"
                />
            </LinearLayout>
        <View android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:layout_gravity="center"
                android:text="@string/two"
                android:textSize="20sp"
                android:paddingTop="16dp"
                android:textColor="@android:color/holo_orange_light"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="24dp"
                android:layout_gravity="center"
                android:text="@string/following"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:fontFamily="sans-serif-light"/>
</LinearLayout>
        </LinearLayout>
</LinearLayout>
    </RelativeLayout>